# osc

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  CREDITS  MANIFEST.in  NEWS  PROJ_PACK.txt  README  README.OpenBSD  README.md  TODO  git-obs.py  git-osc-precommit-hook.py  mktar.py  osc-git.py  osc-wrapper.py  osc.README  osc.fish  osc.py  osc_expand_link.pl  osc_hotshot.py  osclib.py  othermethods.py  run_bandit.sh  setup.cfg  setup.py  tests.py
behave/: Containerfile  KankuFile  README.md  container-build.sh  container-oscrc  container-pull.sh  container-run.sh  container-setup-initial-data.sh  container-setup-prebuilt-rpms.sh  container-setup.sh  container-shell.sh  requirements.spec  requirements.txt
contrib/: build_rpm.py  complete.sh  git-obs-complete.bash  git-obs-complete.fish  git-obs-complete.zsh  osc-prompt.sh  osc.complete  osc.spec  osc.zsh
doc/: README.md  conf.py  git-obs-metadata.rst  git-obs-quickstart.rst  index.rst  requirements.txt
docs/: conf.py  index.rst
fuse/: fuseosc  start  stop
osc/: OAuthHandler.py  OscConfigParser.py  __init__.py  babysitter.py  build.py  checker.py  cmdln.py  commandline.py  commandline_common.py  commandline_git.py  conf.py  connection.py  core.py  cpio.py  credentials.py  fetch.py  grabber.py  meter.py  mirror.py  oscerr.py  oschttps.py  oscssl.py  oscsslexcp.py  othermethods.py  store.py  urllib2_kerberos.py
prjmake/: README  TODO  prjmake.py  setup.py
tests/: __init__.py  common.py  osc  suite.py  test__private_api.py  test__private_package.py  test_addfiles.py  test_build.py  test_commandline.py  test_commit.py  test_conf.py  test_config_parser.py  test_core.py  test_core_package.py  test_core_request.py  test_credentials.py  test_deletefiles.py  test_difffiles.py  test_doc_plugins.py  test_git_editor.py  test_git_scm_store.py  test_gitattributes.py  test_gitea_api_branch.py  test_gitea_api_common.py  test_gitea_api_git.py  test_gitea_api_git_diff_generator.py  test_gitea_api_pr.py  test_gitea_api_repo.py  test_gitea_api_ssh_key.py  test_gitea_api_user.py  test_gitea_exceptions.py  test_gitignore.py  test_grabber.py  test_helpers.py  test_init_package.py  test_init_project.py  (+23 more)
(+637 files in other folders)
