[metadata]
name = osc
version = attr: osc.__version__
description = openSUSE commander
long_description = Command-line client for the Open Build Service
keywords = openSUSE, SUSE, RPM, build, buildservice, command-line
license = GPLv2+
url = http://en.opensuse.org/openSUSE:OSC
download_url = https://github.com/openSUSE/osc
author = openSUSE project
author_email = opensuse-buildservice@opensuse.org
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Build Tools
    Topic :: System :: Archiving :: Packaging

[options]
packages =
    osc
    osc._private
    osc.commands
    osc.commands_git
    osc.git_scm
    osc.gitea_api
    osc.obs_api
    osc.obs_scm
    osc.output
    osc.util
install_requires =
    cryptography
    # rpm is not available on pip, install a matching package manually prior installing osc
    rpm
    ruamel.yaml
    urllib3

[options.extras_require]
lint =
    darker==1.5.1
    mypy

[options.package_data]
osc =
    py.typed

[options.entry_points]
console_scripts =
    git-obs = osc.commandline_git:main
    git-osc-precommit-hook = osc.babysitter:gitOscPrecommitHook
    osc = osc.babysitter:main

[flake8]
exclude = .git,__pycache__
max-line-length = 120

[pylint]
# import-outside-toplevel: we're using lazy imports on too many places
disable = import-outside-toplevel

[pylint.FORMAT]
max-line-length = 120
